adds and tweaks

--- a/free/home/.tmux.conf
+++ b/free/home/.tmux.conf
@@ -4,8 +4,8 @@ set-window-option -g pane-base-index 1
 
 # Custom bindings
 unbind C-b
-set -g prefix C-a
-bind C-a send-prefix
+set -g prefix C-f
+bind C-f send-prefix
 
 bind r source-file ~/.tmux.conf \; display "Config reloaded"
 
@@ -22,8 +22,8 @@ bind -r J resize-pane -D 5
 bind -r K resize-pane -U 5
 bind -r L resize-pane -R 5
 
-#setw -g mode-mouse on
-#set -g mouse-resize-pane on
+setw -g mode-mouse on
+set -g mouse-resize-pane on
 
 # Colors
 set -g status-fg colour20
@@ -35,8 +35,7 @@ set -g status-left "#[fg=colour14][#S]"
 set -g status-justify centre
 set-window-option -g window-status-format '#I:#W '
 set-window-option -g window-status-current-format '#I:#W '
-#set -g status-right "Batt: #{battery_percentage} | %d/%m/%y %R"
-set -g status-right "%m/%d/%y %R"
+set -g status-right "Batt: #{battery_percentage} | %d/%m/%y %R"
 
 set -g visual-activity on
 set-window-option -g monitor-activity on
@@ -44,9 +43,9 @@ set-window-option -g monitor-activity on
 set-window-option -g mode-keys vi
 
 # Plugins
-#set -g @plugin 'tmux-plugins/tpm'
-#set -g @plugin 'tmux-plugins/tmux-sensible'
-#set -g @plugin 'tmux-plugins/tmux-battery'
+set -g @plugin 'tmux-plugins/tpm'
+set -g @plugin 'tmux-plugins/tmux-sensible'
+set -g @plugin 'tmux-plugins/tmux-battery'
 
 # Initialize TMUX plugin manager
-#run '~/.tmux/plugins/tpm/tpm'
+run '~/.tmux/plugins/tpm/tpm'
