--- a/open/home/.cwmrc
+++ b/open/home/.cwmrc
@@ -28,13 +28,13 @@ moveamount 10
 # autogroups
 autogroup 1 "st-256color,tmux"
 autogroup 2 Firefox
-autogroup 3 Geany
+autogroup 3 "Geany,vim"
 autogroup 4 mpv
 
 # menu
 command box    "st -g 80x24+123+284"
 command surf   firefox
-command xlock  "xlock -mode matrix"
+command xlock  "xlock -mode blot"
 
 # binds
 bind 4-Return "st -g 80x24+123+284" # middle left
