--- a/open/home/.tmux.conf
+++ b/open/home/.tmux.conf
@@ -1,4 +1,4 @@
-# the original
+# originally
 #  ▓▓▓▓▓▓▓▓▓▓
 # ░▓ author ▓ xero <x@xero.nu>
 # ░▓ code   ▓ http://code.xero.nu/dotfiles
@@ -12,8 +12,8 @@ set-option -g prefix `
 bind ` send-prefix
 
 # shell
-set -g default-command /usr/local/bin/mksh
-set -g default-shell /usr/local/bin/mksh
+set -g default-command /bin/mksh
+set -g default-shell /bin/mksh
 
 # start with window 1 (instead of 0)
 set -g base-index 1
@@ -90,8 +90,8 @@ setw -g aggressive-resize on
 
 # window status
 set-option -g status-position bottom
-setw -g window-status-format "#[bg=colour6,fg=colour7,noreverse] #W "
-setw -g window-status-current-format "#[bg=colour6,fg=colour7,noreverse] #W "
+setw -g window-status-format "#[bg=colour6,fg=colour7,noreverse]█ #W "
+setw -g window-status-current-format "#[bg=colour6,fg=colour7,noreverse]█ #W "
 
 # info on right
 set -g status-right-length 100
