adds and tweaks

--- a/open/home/.tmux.conf
+++ b/open/home/.tmux.conf
@@ -96,7 +96,7 @@ setw -g window-status-current-format "#[bg=colour6,fg=colour7,noreverse]█ #W "
 # info on right
 set -g status-right-length 100
 set -g status-right ''
-set -g status-right '#(~/bin/tmux-status.sh)'
+set -g status-right '#(~/.bin/tmux-status.sh)'
 # info on left (no session display)
 set -g status-left ''
 
