adds and tweaks

--- a/open/home/.tmux.conf
+++ b/open/home/.tmux.conf
@@ -1,4 +1,4 @@
-# originally
+# the original
 #  ▓▓▓▓▓▓▓▓▓▓
 # ░▓ author ▓ xero <x@xero.nu>
 # ░▓ code   ▓ http://code.xero.nu/dotfiles
@@ -25,7 +25,7 @@ set -g pane-base-index 1
 set -g default-terminal "screen-256color"
 
 # source config file
-bind r source-file ~/.tmux.conf
+bind r source-file ~/.tmux.conf \; display "Reloaded!"
 
 # history
 set -g history-limit 4096
