--- a/open/home/.ncmpcpp/config
+++ b/open/home/.ncmpcpp/config
@@ -1,78 +1,76 @@
-#  ████     ██   ██████  ████     ████ ███████    ██████  ███████  ███████ 
-# ░██░██   ░██  ██░░░░██░██░██   ██░██░██░░░░██  ██░░░░██░██░░░░██░██░░░░██
-# ░██░░██  ░██ ██    ░░ ░██░░██ ██ ░██░██   ░██ ██    ░░ ░██   ░██░██   ░██
-# ░██ ░░██ ░██░██       ░██ ░░███  ░██░███████ ░██       ░███████ ░███████ 
-# ░██  ░░██░██░██       ░██  ░░█   ░██░██░░░░  ░██       ░██░░░░  ░██░░░░  
-# ░██   ░░████░░██    ██░██   ░    ░██░██      ░░██    ██░██      ░██      
-# ░██    ░░███ ░░██████ ░██        ░██░██       ░░██████ ░██      ░██      
-# ░░      ░░░   ░░░░░░  ░░         ░░ ░░         ░░░░░░  ░░       ░░       
-#
-# █▓▒░ Setup
-ncmpcpp_directory = "~/.ncmpcpp"
-#lyrics_directory = "~/.lyrics"
-external_editor = "/bin/vim"
+##################
+# Modal Settings #
+##################
 
-# █▓▒░ MPD Settings
-mpd_crossfade_time = "3"
-mpd_music_dir = "~/Music"
-mpd_host = "127.0.0.1"
-mpd_port = "6600"
+user_interface = "alternative"
+# browser_display_mode = "columns"
+# follow_now_playing_lyrics = "yes"
+# titles_visibility = "no"
+# incremental_seeking = "yes"
+# autocenter_mode = "yes"
+# header_visibility = "no"
+# statusbar_visibility = "yes"
+# cyclic_scrolling = "yes"
+# ignore_leading_the = "yes"
+# enable_window_title = "yes"
+# playlist_disable_highlight_delay = "1"
+# message_delay_time = "3"
+# now_playing_prefix = "$b"
+# now_playing_suffix = "$/b"
+# display_volume_level = "yes"
+# display_bitrate = "yes"
+# clock_display_seconds = "yes"
+# mouse_support = "no"
+# external_editor = "nvim"
+# discard_colors_if_item_is_selected = "yes"
+# execute_on_song_change  = "mpd-notify"
 
-# █▓▒░ Visualizer
-#visualizer_look = "▒░"
-#visualizer_color = "cyan"
-#visualizer_in_stereo = "yes"
-#visualizer_fifo_path = "~/.config/mpd/mpd.fifo"
-#visualizer_sync_interval = "10"
-#visualizer_output_name = "mpd spectrum"
+#######
+# MPD #
+#######
 
-# █▓▒░ Display Settings
-song_list_format = "{$7%a $6> $5}{%t$6$R$b} [{%l}]"
-song_status_format = "$7%a $6$b> $5%t $6$b> $2%b$6"
-statusbar_color = "blue"
-main_window_color = "cyan"
-main_window_highlight_color = "magenta"
-active_column_color = "black"
-header_visibility = "no"
-statusbar_visibility = "yes"
-colors_enabled = "yes"
-now_playing_prefix = "> "
-#now_playing_suffix = ""
-autocenter_mode = "yes"
-centered_cursor = "yes"
-progressbar_color = "black"
-progressbar_elapsed_color = "yellow"
-progressbar_look = "▒▓░"
-titles_visibility = "no"
-mouse_support = "no"
-discard_colors_if_item_is_selected = "yes"
-user_interface = "classic"
-playlist_display_mode = "classic"
+mpd_music_dir = "~/Music/"
 
-# █▓▒░ cheat sheet
-# %l - length
-# %f - filename
-# %D - directory
-# %a - artist
-# %t - title
-# %b - album
-# %y - year
-# %n - track number (01/12 -> 01)
-# %N - full track info (01/12 -> 01/12)
-# %g - genre
-# %c - composer
-# %p - performer
-# %d - disc
-# %C - comment
-# $R - begin right alignment
-# █▓▒░ colors
-# $0 - default window color
-# $1 - black
-# $2 - red
-# $3 - green
-# $4 - yellow
-# $5 - blue
-# $6 - magenta
-# $7 - cyan
-# $8 - white
-# $9 - end of current color
+######
+# UI #
+######
+
+# song_list_format = "{$3%4l}$4 | {$5%a}$4 - {$0%t}"
+# song_columns_list_format = "(22)[blue]{ar} (39)[blue]{t|f} (25)[blue]{b} (7f)[white]{lr}"
+# song_window_title_format = "{%a - %t}"
+# song_library_format = "%t"
+# alternative_header_first_line_format ="$0 $0 {$5%t$9} $0 $0"
+# alternative_header_second_line_format ="{$8%a} $1- {$5%b} {$8(%y)}"
+# playlist_separate_albums = "no"
+# playlist_display_mode = "classic"
+# progressbar_look = "━━╸"
+# progressbar_boldness = "no"
+
+##############
+# Visualizer #
+##############
+
+# visualizer_sync_interval = "30"
+# visualizer_in_stereo = "yes"
+# visualizer_type = "wave_filled"
+
+##########
+# Colors #
+##########
+
+# colors_enabled = "yes"
+# empty_tag_color = "blue"
+# header_window_color = "white"
+# state_line_color = "blue"
+# state_flags_color = "white"
+# main_window_color = "white"
+# main_window_highlight_color = "white"
+# color1 = "blue"
+# color2 = "white"
+# statusbar_color = "white"
+# active_column_color = "green"
+# window_border_color = "black"
+# active_window_border = "black"
+# progressbar_color = "black"
+# progressbar_elapsed_color = "green"
+# alternative_ui_separator_color = "blue"
