--- a/free/d_home/.tmux.conf
+++ b/free/d_home/.tmux.conf
@@ -25,7 +25,7 @@ set -g pane-base-index 1
 set -g default-terminal "screen-256color"
 
 # source config file
-bind r source-file ~/.tmux.conf
+bind r source-file ~/.tmux.conf \; display "Reloaded!"
 
 # history
 set -g history-limit 4096
@@ -38,8 +38,8 @@ unbind [
 bind Escape copy-mode
 unbind p
 bind p paste-buffer
-bind-key -t vi-copy 'v' begin-selection
-bind -t vi-copy y copy-pipe 'xclip -in -selection clipboard'
+#bind-key -t vi-copy 'v' begin-selection
+#bind -t vi-copy y copy-pipe 'xclip -in -selection clipboard'
 
 # use vi mode
 setw -g mode-keys vi
@@ -96,7 +96,7 @@ setw -g window-status-current-format "#[bg=colour6,fg=colour7,noreverse] #W "
 # info on right
 set -g status-right-length 100
 set -g status-right ''
-set -g status-right '#(~/bin/tmux-status.sh)'
+set -g status-right '#(~/.bin/tmux-status.sh)'
 # info on left (no session display)
 set -g status-left ''
 
