--- a/free/l_home/.tmux.conf
+++ b/free/l_home/.tmux.conf
@@ -1,51 +1,119 @@
-set -sg escape-time 1
-set -g base-index 1
-set-window-option -g pane-base-index 1
+# the original
+#  ▓▓▓▓▓▓▓▓▓▓
+# ░▓ author ▓ xero <x@xero.nu>
+# ░▓ code   ▓ http://code.xero.nu/dotfiles
+# ░▓ mirror ▓ http://git.io/.files
+# ░▓▓▓▓▓▓▓▓▓▓
+# ░░░░░░░░░░
 
-# Custom bindings
+# change prefix to backtick
 unbind C-b
-set -g prefix C-f
-bind C-f send-prefix
+set-option -g prefix `
+bind ` send-prefix
 
-bind r source-file ~/.tmux.conf \; display "Config reloaded"
+# shell
+set -g default-command /usr/local/bin/bash
+set -g default-shell /usr/local/bin/bash
 
-bind v split-window -h
-bind V split-window -v
+# start with window 1 (instead of 0)
+set -g base-index 1
 
-bind h select-pane -L
-bind j select-pane -D
-bind k select-pane -U
-bind l select-pane -R
+# start with pane 1
+set -g pane-base-index 1
 
-bind -r H resize-pane -L 5
-bind -r J resize-pane -D 5
-bind -r K resize-pane -U 5
-bind -r L resize-pane -R 5
+# screen mode
+set -g default-terminal "screen-256color"
 
-setw -g mode-mouse on
-set -g mouse-resize-pane on
+# source config file
+bind r source-file ~/.tmux.conf \; display "Reloaded!"
 
-# Colors
-set -g status-fg colour20
-set -g status-bg colour18
-set-window-option -g window-status-current-fg colour15
+# history
+set -g history-limit 4096
 
-# Status bar
-set -g status-left "#[fg=colour14][#S]"
-set -g status-justify centre
-set-window-option -g window-status-format '#I:#W '
-set-window-option -g window-status-current-format '#I:#W '
-set -g status-right "Batt: #{battery_percentage} | %d/%m/%y %R"
+# allow terminal scrolling
+set-option -g terminal-overrides 'xterm*:smcup@:rmcup@'
 
-set -g visual-activity on
-set-window-option -g monitor-activity on
+# vim style copy paste mode
+unbind [
+bind Escape copy-mode
+unbind p
+bind p paste-buffer
+#bind-key -t vi-copy 'v' begin-selection
+#bind -t vi-copy y copy-pipe 'xclip -in -selection clipboard'
 
-set-window-option -g mode-keys vi
+# use vi mode
+setw -g mode-keys vi
+set -g status-keys vi
 
-# Plugins
-set -g @plugin 'tmux-plugins/tpm'
-set -g @plugin 'tmux-plugins/tmux-sensible'
-set -g @plugin 'tmux-plugins/tmux-battery'
+# pleb mode
+#set -g mouse on
 
-# Initialize TMUX plugin manager
-run '~/.tmux/plugins/tpm/tpm'
+# splitting
+unbind %
+bind h split-window -h
+unbind '"'
+bind v split-window -v
+
+# window switching
+# urxvt tab like window switching (-n: no prior escape seq)
+bind-key -n S-left prev
+bind-key -n S-right next
+bind-key -n C-left swap-window -t -1
+bind-key -n C-right swap-window -t +1
+
+# colon :
+bind : command-prompt
+
+# panes
+set -g pane-border-fg colour0
+set -g pane-active-border-fg colour0
+#set -g pane-active-border-attr blink
+
+# status line
+set -g status-justify left
+set -g status-bg colour0
+set -g status-fg colour66
+set -g status-interval 2
+
+# messaging
+set -g message-fg colour7
+set -g message-bg colour6
+set -g message-command-fg colour7
+set -g message-command-bg colour6
+
+# window mode
+setw -g mode-bg colour6
+setw -g mode-fg colour7
+
+# resizing
+setw -g aggressive-resize on
+
+# window status
+set-option -g status-position bottom
+setw -g window-status-format "#[bg=colour6,fg=colour7,noreverse] #W "
+setw -g window-status-current-format "#[bg=colour6,fg=colour7,noreverse] #W "
+
+# info on right
+set -g status-right-length 100
+set -g status-right ''
+set -g status-right '#(~/.bin/tmux-status.sh)'
+# info on left (no session display)
+set -g status-left ''
+
+# loud or quiet?
+set-option -g visual-activity on
+set-option -g visual-bell off
+set-option -g visual-silence off
+set-window-option -g monitor-activity off
+set-option -g bell-action none
+
+# tmux clock
+set -g clock-mode-colour colour6
+
+# some key-binding changes
+bind x kill-pane
+bind X next-layout
+bind Z previous-layout
+
+# toggle status bar visibility
+bind t set status
