--- a/free/d_home/.tmux.conf
+++ b/free/d_home/.tmux.conf
@@ -12,8 +12,8 @@ set-option -g prefix `
 bind ` send-prefix
 
 # shell
-set -g default-command /usr/local/bin/bash
-set -g default-shell /usr/local/bin/bash
+set -g default-command /usr/local/bin/mksh
+set -g default-shell /usr/local/bin/mksh
 
 # start with window 1 (instead of 0)
 set -g base-index 1
