adds and tweaks

--- a/free/d_home/.cwmrc
+++ b/free/d_home/.cwmrc
@@ -54,6 +54,8 @@ bind SM-f     firefox
 bind SM-g     geany
 bind SM-d     dmenu_start.sh
 bind SM-r     dmenu_soma.sh
+#bind SM-x     dmenu_xset.sh
+bind SM-x     dmenu_hset.sh
 bind SM-q     dmenu_exit.sh
 bind M-0      "volume.sh 0" # audio mute toggle
 bind M-minus  "volume.sh -" # audio lower
