--- a/free/l_home/.cwmrc
+++ b/free/l_home/.cwmrc
@@ -1,4 +1,6 @@
-## cwm config
+#
+# ~/.cwmrc
+#
 
 # set font
 fontname "-*-ohsnap.icons-medium-r-*-*-14-*-*-*-*-*-*-1"
@@ -52,11 +54,13 @@ bind SM-f     firefox
 bind SM-g     geany
 bind SM-d     dmenu_start.sh
 bind SM-r     dmenu_soma.sh
-bind SM-x     dmenu_xset.sh
+#bind SM-x     dmenu_xset.sh
+bind SM-x     dmenu_hset.sh
 bind SM-q     dmenu_exit.sh
 bind M-0      "volume.sh 0" # audio mute toggle
 bind M-minus  "volume.sh -" # audio lower
 bind M-equal  "volume.sh +" # audio raise
+bind M-u      uptime.sh
 bind M-w      wetcat.sh
 
 bind 4-v      vmaximize
@@ -119,7 +123,7 @@ bind M-Left   unbind
 bind M-Right  unbind
 bind M-Return unbind
 
-# bind-mouses
+# mousebinds
 mousebind 4-1 window_move
 mousebind 4-2 window_grouptoggle
 mousebind 4-3 window_resize
