--- a/free/etc/desktop/etc/rc.conf
+++ b/free/etc/desktop/etc/rc.conf
@@ -1,4 +1,4 @@
-hostname="FreeBSD"
+hostname="Omaha"
 ifconfig_re0="DHCP"
 dbus_enable="YES"
 # Set dumpdev to "AUTO" to enable crash dumps, "NO" to disable
@@ -8,10 +8,6 @@ sendmail_enable="NO"
 sendmail_submit_enable="NO"
 sendmail_outbound_enable="NO"
 sendmail_msp_queue_enable="NO"
-firewall_enable="YES"
-firewall_quiet="YES"
+firewall_typeble="YES"
 firewall_type="workstation"
-firewall_myservices="22 80"
-firewall_allowservices="any"
-firewall_logdeny="YES"
 devfs_system_ruleset="localrules"
