--- a/net/home/.cwmrc
+++ b/net/home/.cwmrc
@@ -1,93 +1,130 @@
-## cwm config
+#
+# ~/.cwmrc
+#
 
-## Key bindings
-	bind MS-Return xterm
-	bind M-t status.sh
-	bind MS-c delete
-	bind C-r exec
-	bind CMS-l label
-    bind CM-r reload
-	bind M-f maximize
-	bind MS-m menusearch
-	bind M-F8 "mixer -s vol 80:80"
-	bind M-F9 "mixer -s vol -5:-5"
-	bind M-F10 "mixer -s vol +5:+5"
-	bind M-p "dmenu_run -fn '-*-dejavu sans mono-*-*-*-*-14-*-*-*-*-*-*-*' -nb '#dcdad5' -nf '#000000' -sb '#8cd0d3' -sf '#000000'"
+# set font
+fontname "-*-ohsnap.icons-medium-r-*-*-14-*-*-*-*-*-*-1"
 
-	bind M-1 grouponly1
-	bind M-2 grouponly2
-	bind M-3 grouponly3
-	bind M-4 grouponly4
-	bind MS-1 movetogroup1
-	bind MS-2 movetogroup2
-	bind MS-3 movetogroup3
-	bind MS-4 movetogroup4
+# set border width
+borderwidth 4
 
-	mousebind M-2 window_lower
-	mousebind M-3 window_resize
+# gaps
+gap 10 10 10 10
 
-## Application menu
+# snap
+snapdist 10
 
+# stick it
+sticky yes
 
-## Fonts, Style, Color
-	fontname        "DejaVuSansMono:pixelsize=12:antialias=true"
-	color menubg    "#ffffff"
-	color font      "#000000"
+# colors
+color activeborder   '#515e67'
+color inactiveborder '#272c30'
+color menubg         '#252525'
+color menufg         '#e3e3e3'
+color font           '#f7f7f7'
+color selfont        '#D8686D'
 
-	borderwidth 2
-	color activeborder      "#8cd0d3"
-	color inactiveborder    "#dcdccc"
-	gap 10 10 10 10         #[T,B,L,R]
+# faster pussy cat
+moveamount 10
 
-## Ignore programs; no borders
-	ignore xclock
+# autogroup
+autogroup 1 "xterm,tmux"
+autogroup 2 "Navigator,Firefox"
+autogroup 3 "Geany,vim"
+autogroup 4 "mpv,MPlayer"
 
-## Groups predefined
-	autogroup 1 "xterm"
-	autogroup 2 "geany"
-	autogroup 2 "links"
-	autogroup 3 "mpg123"
-	autogroup 3 "mpv"
-    autogroup 4 "Chrome"
-	autogroup 4 "gFTP"
+# menu
+command box    "xterm -g 80x24+290+324"
+command surf   firefox
+command xlock  "xlock -mode blot"
 
-## Tiling
-	#bind 4S-h 	htile
-	#bind 4S-v	vtile
+# Ignore programs by that name by not drawing borders around them.
+ignore firefox
 
-## Mousebindings
-	mousebind CM-1 	window_resize
-	mousebind M-1  	window_move
+# bind-keys (window geometry based on 1920x1080)
+#bind-key 4-Return "xterm -g 80x24+290+324" # middle left
+bind-key 4-Return "urxvtc -g 80x24+290+324" # middle left
+bind-key 4-t      "urxvtc -g 80x24+980+324 -e \"tmux\"" # middle right
+bind-key 4-n      "urxvtc -g 126x72+32+32"   # left 50%
+bind-key 4-m      "urxvtc -g 126x72+995+32"  # right 50%
+bind-key 4-comma  "urxvtc -g 263x34+32+32"  # top 50%
+bind-key 4-period "urxvtc -g 263x34+32+550" # bottom 50%
+bind-key SM-s     status.sh
+bind-key SM-f     firefox
+bind-key SM-g     geany
+bind-key SM-d     dmenu_start.sh
+bind-key SM-r     dmenu_soma.sh
+#bind-key SM-x     dmenu_xset.sh
+bind-key SM-x     dmenu_hset.sh
+bind-key SM-q     dmenu_exit.sh
+bind-key M-0	  "mixer -s vol 80:80"
+bind-key M-minus  "mixer -s vol -5:-5"
+bind-key M-equal  "mixer -s vol +5:+5"
+bind-key M-u      uptime.sh
+bind-key M-w      wetcat.sh
 
-## pointer movement
-    bind 4-j ptrmovedown
-    bind 4S-j bigptrmovedown
-    bind 4-k ptrmoveup
-    bind 4S-k bigptrmoveup
-    bind 4-h ptrmoveleft
-    bind 4S-h bigptrmoveleft
-    bind 4-l ptrmoveright
-    bind 4S-l bigptrmoveright
+bind-key 4-v      vmaximize
+bind-key 4-b      hmaximize
+bind-key 4-f      maximize
+bind-key 4S-h     resizeleft
+bind-key 4S-j     resizedown
+bind-key 4S-k     resizeup
+bind-key 4S-l     resizeright
+bind-key 4MS-h    bigresizeleft
+bind-key 4MS-j    bigresizedown
+bind-key 4MS-k    bigresizeup
+bind-key 4MS-l    bigresizeright
 
-## Window movement (standard bindings)
-    bind M-h moveleft
-    bind MS-h bigmoveleft
-    bind M-j movedown
-    bind MS-j bigmovedown
-    bind M-k moveup
-    bind MS-k bigmoveup
-    bind M-l moveright
-    bind MS-l bigmoveright
+bind-key 4-h      moveleft
+bind-key 4-j      movedown
+bind-key 4-k      moveup
+bind-key 4-l      moveright
+bind-key 4C-h     bigmoveleft
+bind-key 4C-j     bigmovedown
+bind-key 4C-k     bigmoveup
+bind-key 4C-l     bigmoveright
 
-## Window resizing
-    bind MC-h resizeleft
-    bind MCS-h bigresizeleft
-    bind MC-j resizedown
-    bind MCS-j bigresizedown
-    bind MC-k resizeup
-    bind MCS-k bigresizeup
-    bind MC-l resizeright
-    bind MCS-l bigresizeright
+bind-key 4S-comma label
+bind-key 4S-e     delete
 
-    snapdist 4
-    sticky yes
+bind-key 4-Tab    cycle
+bind-key 4S-Tab   rcycle
+
+bind-key 4-g      grouptoggle
+bind-key 4MC-l    cyclegroup
+bind-key 4MC-h    rcyclegroup
+bind-key 4-1      group-toggle-1
+bind-key 4-2      group-toggle-2
+bind-key 4-3      group-toggle-3
+bind-key 4-4      group-toggle-4
+bind-key 4-5      group-toggle-5
+bind-key 4-6      group-toggle-6
+bind-key 4-7      group-toggle-7
+bind-key 4-8      group-toggle-8
+bind-key 4-9      group-toggle-9
+bind-key 4-0      nogroup
+bind-key 4M-1     group-only-1
+bind-key 4M-2     group-only-2
+bind-key 4M-3     group-only-3
+bind-key 4M-4     group-only-4
+bind-key 4M-5     group-only-5
+bind-key 4M-6     group-only-6
+bind-key 4M-7     group-only-7
+bind-key 4M-8     group-only-8
+bind-key 4M-9     group-only-9
+
+bind-key 4C-r     restart
+bind-key 4C-q     quit
+
+bind-key 4-d      exec
+bind-key 4-s      search
+
+#bind-key M-Left   unbind-key
+#bind-key M-Right  unbind-key
+#bind-key M-Return unbind-key
+
+# bind-mouses
+bind-mouse 4-1 window_move
+bind-mouse 4-2 window_grouptoggle
+bind-mouse 4-3 window_resize
