--- a/net/home/.mkshrc
+++ b/net/home/.mkshrc
@@ -1,28 +1,6 @@
-#!/usr/pkg/bin/mksh
-
-alias h='fc -l'
-alias p='pwd'
-alias j=jobs
-alias m=$PAGER
-alias ll='colorls -laFoG'
-alias l='colorls -lfG'
-alias g='egrep -i'
-alias preview='feh -g 450x300+500+200 -R .01 --zoom fill'
-#alias rec='ffmpeg2 -f x11grab -s 1280x800 -an -i :0.0 -c:v libvpx -b:v 5M -crf 10 -quality realtime -y -loglevel quiet'
-alias rec='ffmpeg2 -f x11grab -s 1440x900 -an -i :0.0 -c:v libvpx -b:v 5M -crf 10 -quality realtime -y -loglevel quiet'
-alias info='nbinfo.sh'
-alias todo='vi ~/todo'
-alias rnet='sudo /etc/rc.d/network restart'
-alias shutdown='sudo /sbin/shutdown -p now "going down"'
-alias zzz='xlock'
-alias shootme='DISPLAY=:0 import -window root ~/Pictures/scrots/scrot-$(date +%m-%d-%Y-%H-%M-%S).png'
-alias cp='cp -ip'
-alias mv='mv -i'
-alias rm='rm -i'
-alias free='top -n 1 | head -n 5 | tail -n 2'
-alias blankf='cdrecord dev=/dev/rcd0d blank=fast'
-alias blanka='cdrecord dev=/dev/rcd0d blank=all'
-alias rip='sudo cdparanoia -g /dev/rcd0d -B'
+#!/bin/sh
+# ~/.mkshrc
+#
 
 PS1=""
  case `id -u` in
@@ -30,26 +8,10 @@ PS1=""
  	*) PS1="${PS1}$ ";;
  esac
 
-man() {
-	if [ "$TERM" = 'linux' ]; then
-		env \
-			LESS_TERMCAP_mb=$(printf "\e[34m") \
-			LESS_TERMCAP_md=$(printf "\e[1;31m") \
-			LESS_TERMCAP_me=$(printf "\e[0m") \
-			LESS_TERMCAP_se=$(printf "\e[0m") \
-			LESS_TERMCAP_so=$(printf "\e[30;43m") \
-			LESS_TERMCAP_ue=$(printf "\e[0m") \
-			LESS_TERMCAP_us=$(printf "\e[32m") \
-					/usr/bin/man "$@"
-	else
-		env \
-			LESS_TERMCAP_mb=$(printf "\e[1;34m") \
-			LESS_TERMCAP_md=$(printf "\e[38;5;9m") \
-			LESS_TERMCAP_me=$(printf "\e[0m") \
-			LESS_TERMCAP_se=$(printf "\e[0m") \
-			LESS_TERMCAP_so=$(printf "\e[30;43m") \
-			LESS_TERMCAP_ue=$(printf "\e[0m") \
-			LESS_TERMCAP_us=$(printf "\e[38;5;10m") \
-					/usr/bin/man "$@"
-	fi
-}
+# Do make a history
+HISTFILE=~/.mksh/history
+HISTSIZE=5000
+
+for h in ~/.etc/*; do
+	source "${h}"
+done
