--- a/net/home/.tmux.conf
+++ b/net/home/.tmux.conf
@@ -1,149 +1,119 @@
-# cat << ►_◄ > /dev/null
+# the original
+#  ▓▓▓▓▓▓▓▓▓▓
+# ░▓ author ▓ xero <x@xero.nu>
+# ░▓ code   ▓ http://code.xero.nu/dotfiles
+# ░▓ mirror ▓ http://git.io/.files
+# ░▓▓▓▓▓▓▓▓▓▓
+# ░░░░░░░░░░
 
+# change prefix to backtick
+unbind C-b
+set-option -g prefix `
+bind ` send-prefix
 
-# -- general -------------------------------------------------------------------
+# shell
+set -g default-command /usr/pkg/bin/mksh
+set -g default-shell /usr/pkg/bin/mksh
 
-set -g default-terminal "screen-256color" # colors!
-setw -g xterm-keys on
-set -s escape-time 0                      # fastest command sequences
-set -sg repeat-time 600                   # increase repeat timeout
-set -s quiet on                           # disable various messages
+# start with window 1 (instead of 0)
+set -g base-index 1
 
-set -g prefix2 C-a                        # GNU-Screen compatible prefix
-bind C-a send-prefix -2
+# start with pane 1
+set -g pane-base-index 1
 
-set -g status-utf8 on                     # expect UTF-8
-setw -g utf8 on
+# screen mode
+set -g default-terminal "screen-256color"
 
-set -g history-limit 5000                 # boost history
+# source config file
+bind r source-file ~/.tmux.conf \; display "Reloaded!"
 
-# edit configuration
-bind e new-window -n '~/.tmux.conf.local' "sh -c '\${EDITOR:-vim} ~/.tmux.conf.local && tmux source ~/.tmux.conf && tmux display \"~/.tmux.conf sourced\"'"
+# history
+set -g history-limit 4096
 
-# reload configuration
-bind r source-file ~/.tmux.conf \; display '~/.tmux.conf sourced'
+# allow terminal scrolling
+set-option -g terminal-overrides 'xterm*:smcup@:rmcup@'
 
-# see https://github.com/ChrisJohnsen/tmux-MacOSX-pasteboard
-if 'which -s reattach-to-user-namespace' 'set -g default-command "exec initializing... 2> /dev/null & reattach-to-user-namespace $SHELL -l"'
-
-
-# -- display -------------------------------------------------------------------
-
-set -g base-index 1         # start windows numbering at 1
-setw -g pane-base-index 1   # make pane numbering consistent with windows
-
-setw -g automatic-rename on # rename window to reflect current program
-# renumber windows when a window is closed
-set -g renumber-windows on
-
-set -g set-titles on                        # set terminal title
-set -g set-titles-string '#h ❐ #S ● #I #W'
-
-set -g display-panes-time 800 # slightly longer pane indicators display time
-set -g display-time 1000      # slightly longer status messages display time
-
-set -g status-interval 10     # redraw status line every 10 seconds
-
-# 24 hour clock
-setw -g clock-mode-style 24
-
-# clear both screen and history
-bind -n C-l send-keys C-l \; run 'tmux clear-history'
-
-# activity
-set -g monitor-activity on
-set -g visual-activity off
-
-
-# -- navigation ----------------------------------------------------------------
-
-# find session
-bind C-f command-prompt -p find-session 'switch-client -t %%'
-
-# pane navigation
-bind -r h select-pane -L  # move left
-bind -r j select-pane -D  # move down
-bind -r k select-pane -U  # move up
-bind -r l select-pane -R  # move right
-bind > swap-pane -D       # swap current pane with the next one
-bind < swap-pane -U       # swap current pane with the previous one
-
-# maximize current pane
-bind + run 'cut -c3- ~/.tmux.conf | sh -s maximize_pane'
-
-# pane resizing
-bind -r H resize-pane -L 2
-bind -r J resize-pane -D 2
-bind -r K resize-pane -U 2
-bind -r L resize-pane -R 2
-
-# window navigation
-unbind n
+# vim style copy paste mode
+unbind [
+bind Escape copy-mode
 unbind p
-bind -r C-h previous-window # select previous window
-bind -r C-l next-window     # select next window
-bind Tab last-window        # move to last active window
+bind p paste-buffer
+#bind-key -t vi-copy 'v' begin-selection
+#bind -t vi-copy y copy-pipe 'xclip -in -selection clipboard'
 
-# toggle mouse
-bind m run "cut -c3- ~/.tmux.conf | sh -s toggle_mouse"
+# use vi mode
+setw -g mode-keys vi
+set -g status-keys vi
 
+# pleb mode
+#set -g mouse on
 
-# -- urlview -------------------------------------------------------------------
+# splitting
+unbind %
+bind h split-window -h
+unbind '"'
+bind v split-window -v
 
-bind U run "cut -c3- ~/.tmux.conf | sh -s urlview #{pane_id}"
+# window switching
+# urxvt tab like window switching (-n: no prior escape seq)
+bind-key -n S-left prev
+bind-key -n S-right next
+bind-key -n C-left swap-window -t -1
+bind-key -n C-right swap-window -t +1
 
+# colon :
+bind : command-prompt
 
-# -- facebook pathpicker -------------------------------------------------------
+# panes
+set -g pane-border-fg colour0
+set -g pane-active-border-fg colour0
+#set -g pane-active-border-attr blink
 
-bind F run "cut -c3- ~/.tmux.conf | sh -s fpp #{pane_id}"
+# status line
+set -g status-justify left
+set -g status-bg colour0
+set -g status-fg colour66
+set -g status-interval 2
 
+# messaging
+set -g message-fg colour7
+set -g message-bg colour6
+set -g message-command-fg colour7
+set -g message-command-bg colour6
 
-# -- list choice ---------------------------------------------------------------
+# window mode
+setw -g mode-bg colour6
+setw -g mode-fg colour7
 
-bind -t vi-choice h tree-collapse
-bind -t vi-choice l tree-expand
-run -b 'tmux bind -t vi-choice K start-of-list 2> /dev/null'
-run -b 'tmux bind -t vi-choice J end-of-list 2> /dev/null'
-bind -t vi-choice H tree-collapse-all
-bind -t vi-choice L tree-expand-all
-bind -t vi-choice Escape cancel
+# resizing
+setw -g aggressive-resize on
 
+# window status
+set-option -g status-position bottom
+setw -g window-status-format "#[bg=colour6,fg=colour7,noreverse] #W "
+setw -g window-status-current-format "#[bg=colour6,fg=colour7,noreverse] #W "
 
-# -- edit mode -----------------------------------------------------------------
+# info on right
+set -g status-right-length 100
+set -g status-right ''
+set -g status-right '#(~/.bin/tmux-status.sh)'
+# info on left (no session display)
+set -g status-left ''
 
-# the following vi-copy bindings match my vim settings
-#   see https://github.com/gpakosz/.vim.git
-bind -ct vi-edit H start-of-line
-bind -ct vi-edit L end-of-line
-bind -ct vi-edit q cancel
-bind -ct vi-edit Escape cancel
+# loud or quiet?
+set-option -g visual-activity on
+set-option -g visual-bell off
+set-option -g visual-silence off
+set-window-option -g monitor-activity off
+set-option -g bell-action none
 
+# tmux clock
+set -g clock-mode-colour colour6
 
-# -- copy mode -----------------------------------------------------------------
+# some key-binding changes
+bind x kill-pane
+bind X next-layout
+bind Z previous-layout
 
-bind Enter copy-mode # enter copy mode
-bind b list-buffers  # list paster buffers
-bind p paste-buffer  # paste from the top pate buffer
-bind P choose-buffer # choose which buffer to paste from
-
-# the following vi-copy bindings match my vim settings
-#   see https://github.com/gpakosz/.vim.git
-bind -t vi-copy v begin-selection
-bind -t vi-copy C-v rectangle-toggle
-bind -t vi-copy y copy-selection
-bind -t vi-copy Escape cancel
-bind -t vi-copy H start-of-line
-bind -t vi-copy L end-of-line
-
-# copy to Mac OSX pasteboard
-if -b 'which -s reattach-to-user-namespace' 'bind y run "tmux save-buffer - | reattach-to-user-namespace pbcopy"'
-
-
-# -- user defined --------------------------------------------------------------
-
-if '[ -f ~/.tmux.conf.local ]' 'source ~/.tmux.conf.local'
-
-
-# -- 8< ------------------------------------------------------------------------
-
-run 'cut -c3- ~/.tmux.conf | sh -s apply_configuration'
+# toggle status bar visibility
+bind t set status
