--- a/net/home/Source/bar/Makefile.org
+++ b/net/home/Source/bar/Makefile.org
@@ -1,8 +1,14 @@
-VERSION = 1.1
+# This snippet has been shmelessly stol^Hborrowed from thestinger's repose Makefile
+VERSION = 1.3
+GIT_DESC=$(shell test -d .git && git describe --always 2>/dev/null)
+
+ifneq "$(GIT_DESC)" ""
+	VERSION=$(GIT_DESC)
+endif
 
 CC	?= gcc
-CFLAGS += -Wall -std=c99 -Os -DVERSION="\"$(VERSION)\"" -I/usr/X11R7/include/freetype2
-LDFLAGS += -I/usr/X11R7/lib -lxcb -lxcb-xinerama -lxcb-randr -lX11 -lX11-xcb -lXft -lfreetype -lz -lfontconfig
+CFLAGS += -Wall -std=c99 -Os -DVERSION="\"$(VERSION)\""
+LDFLAGS += -lxcb -lxcb-xinerama -lxcb-randr
 CFDEBUG = -g3 -pedantic -Wall -Wunused-parameter -Wlong-long \
           -Wsign-conversion -Wconversion -Wimplicit-function-declaration
 
@@ -10,7 +16,7 @@ EXEC = lemonbar
 SRCS = lemonbar.c
 OBJS = ${SRCS:.c=.o}
 
-PREFIX=/usr/pkg
+PREFIX?=/usr
 BINDIR=${PREFIX}/bin
 
 all: ${EXEC}
@@ -32,16 +38,11 @@ clean:
 	rm -f ./${EXEC}
 
 install: lemonbar doc
-#	install -D -m 755 lemonbar ${DESTDIR}${BINDIR}/lemonbar
-#	install -D -m 644 lemonbar.1 ${DESTDIR}${PREFIX}/share/man/man1/lemonbar.1
-	
-	mkdir -p $(DESTDIR)$(PREFIX)/bin
-	cp -f $(EXEC) $(DESTDIR)$(PREFIX)/bin
-	mkdir -p $(DESTDIR)$(PREFIX)/share/man/man1
-	cp -f $(EXEC).1 $(DESTDIR)$(PREFIX)/share/man/man1/lemonbar.1
+	install -D -m 755 lemonbar ${DESTDIR}${BINDIR}/lemonbar
+	install -D -m 644 lemonbar.1 ${DESTDIR}${PREFIX}/share/man/man1/lemonbar.1
 
 uninstall:
-	rm -f ${DESTDIR}${PREFIX}/lemonbar
+	rm -f ${DESTDIR}${BINDIR}/lemonbar
 	rm -f $(DESTDIR)$(PREFIX)/share/man/man1/lemonbar.1
 
 .PHONY: all debug clean install
