adds and tweaks

--- a/net/home/.mkshrc
+++ b/net/home/.mkshrc
@@ -26,9 +26,9 @@ alias ln='ln -i'
 #alias ..='cd ../'
 #alias ...='cd ../../'
 #alias ....='cd ../../../'
-#alias ls='ls -G'
-alias la='ls -A'
-alias ll='ls -lG'
+alias ls='colorls -G'
+alias la='colorls -A'
+alias ll='colorls -L'
 alias md='mkdir -p -v'
 alias rd='rmdir -v'
 alias h='fc -l'
