adds and tweaks

--- a/net/home/.mkshrc
+++ b/net/home/.mkshrc
@@ -76,3 +76,4 @@ alias g='git'
 alias gc='git commit -m "adds and tweaks"'
 alias mc='mc -a'
 alias umount='sudo umount /mnt/$1'
+alias dm='dmenu_start.sh'
